feat: link Trainer to User and moved name to User
